--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python:
   - "2.7"
-# command to install dependencies
+before_install: "pip install --target=.lib --ignore-installed 'about>=5.1,<6'"
 install: "pip install ."
 # command to run tests
 script: "python setup.py test"
