--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_install:
   - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 575159689BEFB442
   - echo 'deb http://download.fpcomplete.com/ubuntu precise main'|sudo tee /etc/apt/sources.list.d/fpco.list
   - sudo apt-get update && sudo apt-get install stack -y
+  - stack setup
   - stack install pandoc
   - pip install --target=.lib --ignore-installed 'about>=5.1,<6'
 install: "pip install ."
