--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,11 @@ before_install:
   - sudo apt-get update && sudo apt-get install stack -y
   - stack setup
   - stack install pandoc
+  - pip install coverage codecov
   - pip install --target=.lib --ignore-installed 'about>=5.1,<6'
 install: "pip install ."
 # command to run tests
 script: "python setup.py test"
+after_success:
+  - coverage run --branch --source=pandoc setup.py test
+  - codecov
