--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ python:
 before_install:
   - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 575159689BEFB442
   - echo 'deb http://download.fpcomplete.com/ubuntu precise main'|sudo tee /etc/apt/sources.list.d/fpco.list
-  - sudo apt-get update && sudo apt-get install stack -y
-  - stack setup
-  - stack install pandoc
+  - sudo apt-get update 
+  - apt-get install -y curl
+  - apt-get install -y libgmp10
+  - curl -L https://github.com/jgm/pandoc/releases/download/1.16.0.2/pandoc-1.16.0.2-1-amd64.deb > pandoc.deb
+  - dpkg --install pandoc.deb
   - pip install coverage codecov
   - pip install --target=.lib --ignore-installed 'about>=5.1,<6'
 install: "pip install ."
