--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,12 @@ language: python
 python:
   - "2.7"
 before_install:
-  - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 575159689BEFB442
-  - echo 'deb http://download.fpcomplete.com/ubuntu precise main'|sudo tee /etc/apt/sources.list.d/fpco.list
   - sudo apt-get update 
-  - apt-get install -y curl
-  - apt-get install -y libgmp10
+  - sudo apt-get install -y curl
+  - sudo apt-get install -y libgmp10
   - curl -L https://github.com/jgm/pandoc/releases/download/1.16.0.2/pandoc-1.16.0.2-1-amd64.deb > pandoc.deb
-  - dpkg --install pandoc.deb
-  - pip install coverage codecov
+  - sudo dpkg --install pandoc.deb
+  - sudo pip install coverage codecov
   - pip install --target=.lib --ignore-installed 'about>=5.1,<6'
 install: "pip install ."
 # command to run tests
