--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,6 +19,7 @@ environment:
 #    - PYTHON: "C:\\Python35-x64"
 
 install:
+  - "%PYTHON%\\python.exe -c "print 'pytho ok'"
   - "%PYTHON%\\python.exe -m pip install --target=.lib --ignore-installed 'about>=5.1,<6'"
   - "%PYTHON%\\python.exe -m pip install ."
 
