tweak appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,7 +20,7 @@ environment:
 
 install:
   - "%PYTHON%\\python.exe -c \"print 'python ok'\""
-#  - "%PYTHON%\\python.exe -m pip install requests"
+  - "%PYTHON%\\python.exe -m pip install requests"
 #  - "%PYTHON%\\python.exe -m pip install --target=.lib --ignore-installed 'about>=5.1,<6'"
   - "%PYTHON%\\python.exe -m pip install ."
 
