--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+# TODO: go with conda instead: benefit from multiple pandoc (program) versions
+#       from sudo: false.
 language: python
 python:
   - "2.7"
