--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ site_dir: docs
 pages:
   - Overview: index.md
   - Examples: examples.md
+  - Document: ast.md
   - Configuration: configuration.md
   - API Reference: api.md
 
