--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,22 @@
-# TODO: go with conda instead: benefit from multiple pandoc (program) versions
-#       from sudo: false.
-language: python
-python:
-  - "2.7"
-  - "3.4"
+sudo: false
+dist: trusty
+language: bash
+
+env:
+#- CONDA=https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh
+- CONDA=https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
+
 before_install:
-  - sudo apt-get update 
-  - sudo apt-get install -y curl
-  - sudo apt-get install -y libgmp10
-  - curl -L https://github.com/jgm/pandoc/releases/download/1.16.0.2/pandoc-1.16.0.2-1-amd64.deb > pandoc.deb
-  - sudo dpkg --install pandoc.deb
-#  - sudo pip install coverage codecov
+  - curl $CONDA > conda.sh
+  - bash conda.sh -b -p $HOME/conda
+  - export PATH=$HOME/conda/bin:$PATH
+  - conda install --yes -c conda-forge pandoc=2.1.3
+  - conda install --yes pyyaml
   - pip install --target=.lib --ignore-installed 'about>=5.1,<6'
-  - pip install pyyaml
-install: "pip install ."
-# command to run tests
-script: "python test.py"  #"python setup.py test"
-#after_success:
-#  - coverage run --branch --source=pandoc setup.py test
-#  - codecov
+
+install:
+  - pip install .
+
+script: 
+  - python test.py
+
