--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,11 @@
+name: python3-pandoc
 channels:
   - conda-forge
 dependencies:
   - python=3.7
-  - pandoc=2.1.3
+  - pandoc=2.5
   - plumbum
   - ply
-  - mkdocs
   - pip:
+    - mkdocs
     - mkdocs-material
