--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ environment:
   matrix:
     - CONDA: C:\Miniconda37-x64
 
-install:
+build:
   - cmd: set PATH=%PATH%;%CONDA%;%CONDA%\Scripts
   - cmd: cd c:\projects\pandoc
   - cmd: conda env create -n pandoc -f environment.yml
