--- a/.travis.yml
+++ b/.travis.yml
@@ -29,3 +29,10 @@ deploy:
   on:
     branch: master
 
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/158c84e40cffffb115d3
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
