test on ubuntu and windows (gha)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,7 @@ on: [push]
 
 jobs:
   main:
-    # was: ubuntu-20.04
-    runs-on: windows-latest
+    runs-on: [ubuntu-20.04, windows-latest]
     defaults:
       run:
         shell: bash -l {0} 
