--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,10 @@ on: [push]
 
 jobs:
   main:
-    runs-on: [ubuntu-20.04, windows-latest]
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-20.04, windows-latest]
     defaults:
       run:
         shell: bash -l {0} 
