--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,11 @@ jobs:
         run: python test.py -v
 
       - name: Prepare deploy
-        if: matrix.os == "ubuntu-20.04"
+        if: matrix.os == 'ubuntu-20.04'
         run: rm .gitignore
 
       - name: Deploy documentation
-        if: matrix.os == "ubuntu-20.04"
+        if: matrix.os == 'ubuntu-20.04'
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
