--- a/mkdocs/api.md.template
+++ b/mkdocs/api.md.template
@@ -174,6 +174,9 @@ from pandoc.types import *
     >>> _ = pandoc.write(doc, file="doc.html")
     >>> open("doc.html", encoding="utf-8").read()
     '<p>Hello world!</p>\n'
+    >>> _ = pandoc.write(doc, file="doc.pdf")
+    >>> open("doc.pdf", "rb").read() # doctest: +ELLIPSIS
+    b'%PDF...'
     ```
 
     Use extra pandoc options:
