--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,9 @@ jobs:
           activate-environment: pandoc
           environment-file: environment.yml
 
+      - name: Install LaTeX
+        run: apt-get update && apt-get upgrade && apt-get install texlive-full
+
       - name: Install Python pandoc 
         run: python setup.py install
 
