build: fix doc deployment

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,16 +70,16 @@ jobs:
       - name: Test Python pandoc
         run: python test.py
 
-      - name: Build documentation
-        if: matrix.os == 'ubuntu-20.04'
+      - name: Build documentation (Ubuntu)
+        if: matrix.os == 'ubuntu-latest'
         run: mkdocs build
 
-      - name: Prepare deployment
-        if: matrix.os == 'ubuntu-20.04'
+      - name: Prepare documentation deployment (Ubuntu)
+        if: matrix.os == 'ubuntu-latest'
         run: rm .gitignore
 
-      - name: Deploy documentation
-        if: matrix.os == 'ubuntu-20.04'
+      - name: Deploy documentation (Ubuntu)
+        if: matrix.os == 'ubuntu-latest'
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
