--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,8 +30,7 @@ jobs:
         if: matrix.os == 'macos-latest'
         run: |
           /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-          # brew install homebrew/brew-cask
-          brew cask install mactex
+          brew install --cask mactex
 
       - name: Install LaTeX (Windows)
         if: matrix.os == 'windows-latest'
