--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ nav:
   - Cookbook: cookbook.md
   - Command-line interface: cli.md
   - API reference: api.md
+  - Changelog: changelog.md
 
 theme: "material" 
 
