📝 labs: some documentation (wip)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,7 +16,7 @@ nav:
   - Command-line interface: cli.md
   - API reference: api.md
   - Changelog: changelog.md
-  - "🧪 Labs": labs.md
+  - "Labs 🧪": labs.md
 
 theme: "material" 
 
