--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
 dependencies:
   - python=3.10
-  - pandoc=2.19.2
+  - pandoc=3.1.1
   - plumbum
   - ply
   - pip
@@ -13,6 +13,6 @@ dependencies:
   - black
   - emoji
   - pip:
-    - strictyaml # conda version if 1.6.0 and doesn't solve https://github.com/crdoconnor/strictyaml/issues/151
-    - mkdocs
-    - mkdocs-material
+      - strictyaml # conda version if 1.6.0 and doesn't solve https://github.com/crdoconnor/strictyaml/issues/151
+      - mkdocs
+      - mkdocs-material==9.1.6
