--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -20,16 +20,6 @@ jobs:
           activate-environment: pandoc
           environment-file: environment.yml
 
-      # - name: Install Scoop
-      #   uses: MinoruSekine/setup-scoop@v1      
-
-      # - name: Install LaTeX (Windows) # Broken
-      #   if: matrix.os == 'windows-latest'
-      #   shell: pwsh
-      #   run: |
-      #       scoop bucket add main
-      #       scoop install miktex
-
       - name: Install LaTeX (Windows)
         if: matrix.os == 'windows-latest'
         shell: bash
@@ -37,8 +27,8 @@ jobs:
           set -x
           echo "Downloading MiKTeX CLI installer"
           # We download from a specific miror already # TODO: Should store this setup package somewhere ourselves
-          curl -L -O https://distrib-coffee.ipsl.jussieu.fr/pub/mirrors/ctan/systems/win32/miktex/setup/windows-x64/miktexsetup-5.2.0+b8f430f-x64.zip
-          unzip miktexsetup-5.2.0+b8f430f-x64.zip
+          curl -L -O https://miktex.org/download/ctan/systems/win32/miktex/setup/windows-x64/miktexsetup-5.5.0+1763023-x64.zip
+          unzip miktexsetup-5.5.0+1763023-x64.zip
 
           echo "Setting up the local package directory via download"
           ./miktexsetup_standalone --verbose \
