--- a/.github/workflows/experimental.yml
+++ b/.github/workflows/experimental.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v4
         
       - name: Branch experimental
-        run: git checkout experimental
+        run: git branch # git checkout experimental
 
       - name: Activate Conda environment
         uses: conda-incubator/setup-miniconda@v3
