⬆️ Update pandoc and python versions in environment.yml

--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,11 @@
 name: pandoc
 channels:
   - conda-forge
+  - nodefaults
 dependencies:
-  - python=3.10
-  - pandoc=3.1.1
+  - python=3.12.5
+  - pandoc=3.3
+  - plumbum
   - ply
   - pip
   - setuptools
@@ -11,7 +13,6 @@ dependencies:
   - twine
   - black
   - emoji
-  - pip:
-      - strictyaml # conda version if 1.6.0 and doesn't solve https://github.com/crdoconnor/strictyaml/issues/151
-      - mkdocs
-      - mkdocs-material==9.1.6
+  - strictyaml
+  - mkdocs
+  - mkdocs-material=9.1.6
